--- a/Starry.Data.Tests/Starry.Data.Tests.csproj
+++ b/Starry.Data.Tests/Starry.Data.Tests.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="DbClientTest.cs" />
+    <Compile Include="DbFixed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
