--- a/Starry.Data.Tests/App.config
+++ b/Starry.Data.Tests/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TEST" connectionString="sqlite_test.db;Version=3;New=True;" providerName="System.Data.SQLite.EF6" />
+    <add name="TEST" connectionString="Data Source=sqlite_test.db;Version=3;New=True;" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
