--- a/Starry.Data.Tests/Starry.Data.Tests.csproj
+++ b/Starry.Data.Tests/Starry.Data.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="DbClientTest.cs" />
     <Compile Include="DbFixed.cs" />
+    <Compile Include="Models\BlogInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
