--- a/Starry.Data.Tests/App.config
+++ b/Starry.Data.Tests/App.config
@@ -1,27 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <connectionStrings>
-    <add name="TEST" connectionString="Data Source=sqlite_test.db;Version=3;New=True;" providerName="System.Data.SQLite.EF6" />
-  </connectionStrings>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="System.Data.SQLite.EF6" />
-      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+      <remove invariant="Mono.Data.Sqlite" />
+      <add name="Mono Sqlite Data Provider" invariant="Mono.Data.Sqlite" description="ADO.NET 2.0 Data Provider for SQLite" type="Mono.Data.Sqlite.SqliteFactory, Mono.Data.Sqlite" />
     </DbProviderFactories>
   </system.data>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v13.0" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-    </providers>
-  </entityFramework>
+  <connectionStrings>
+    <add name="TEST" connectionString="Data Source=sqlite_test.db;Version=3;New=True;" providerName="Mono.Data.Sqlite" />
+  </connectionStrings>
 </configuration>
