--- a/Starry.Data.Tests/packages.config
+++ b/Starry.Data.Tests/packages.config
@@ -1,11 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="Mono.Data.Sqlite.Portable" version="1.0.3.5" targetFramework="net45" />
   <package id="sqlite" version="3.13.0" targetFramework="net45" />
-  <package id="System.Data.SQLite" version="1.0.103" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net45" />
-  <package id="System.Data.SQLite.EF6" version="1.0.103" targetFramework="net45" />
-  <package id="System.Data.SQLite.Linq" version="1.0.103" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.2.0-beta4-build1194" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
 </packages>
