travis-ci.org not support memory database, back to db file.

--- a/Starry.Data.Tests/App.config
+++ b/Starry.Data.Tests/App.config
@@ -7,6 +7,6 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="TEST" connectionString="Data Source=:memory:;Version=3;New=True;" providerName="Mono.Data.Sqlite" />
+    <add name="TEST" connectionString="Data Source=sqlite_test.db;Version=3;New=True;" providerName="Mono.Data.Sqlite" />
   </connectionStrings>
 </configuration>
