bugfix : the column type is DBNull setted failure & DbClientWR's read flag problem repair

--- a/Starry.Data.Tests/Starry.Data.Tests.csproj
+++ b/Starry.Data.Tests/Starry.Data.Tests.csproj
@@ -63,8 +63,12 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="DbClientTest.cs" />
+    <Compile Include="DbClientWRTest.cs" />
     <Compile Include="DbFixed.cs" />
+    <Compile Include="DbHelperTest.cs" />
     <Compile Include="Models\BlogInfo.cs" />
+    <Compile Include="Models\DbNullEntityEx.cs" />
+    <Compile Include="Models\DbNullEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
