--- a/Starry.Data.Tests/App.config
+++ b/Starry.Data.Tests/App.config
@@ -8,5 +8,7 @@
   </system.data>
   <connectionStrings>
     <add name="TEST" connectionString="Data Source=sqlite_test.db;Version=3;New=True;" providerName="Mono.Data.Sqlite" />
+    <add name="TEST.read" connectionString="Data Source=sqlite_test_read.db;Version=3;New=True;" providerName="Mono.Data.Sqlite" />
+    <add name="TEST.write" connectionString="Data Source=sqlite_test_write.db;Version=3;New=True;" providerName="Mono.Data.Sqlite" />
   </connectionStrings>
 </configuration>
